# HermesP2P

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  TASKS.md  design.json  design.md  fly.toml  hp2p-config-schema.json  main.py  package-lock.json  package.json  pact.yaml  pyproject.toml  replit.nix  sops.md  standards.json  task.md  tasks.json
.github/: FUNDING.yml
contracts/crypto_verify/history/: 20260219_153132.json
contracts/discovery_module/history/: 20260219_153836.json
contracts/integration/history/: 20260219_154728.json
contracts/padding_module/history/: 20260219_155554.json
contracts/pseudonyms_module/history/: 20260219_160154.json
contracts/root/history/: 20260219_162047.json
contracts/ttl_module/history/: 20260219_160745.json
decomposition/: decisions.json  interview.json  pitch.json  tree.json
docs/: index.html
learnings/: learnings.jsonl
static/css/: style.css
static/js/: bot-identities.js  bots.js  client.js  config.js  crypto.js  discovery.js  messages.js  network-panel.js  network.js  padding.js  popup.js  pseudonyms.js  ttl.js  ui.js
templates/: client.html  index.html
tests/: discovery-gaps.test.js  messages-gaps.test.js
tests/crypto_verify/: contract_test_suite.json
tests/discovery_module/: contract_test_suite.json
tests/integration/: contract_test_suite.json
tests/padding_module/: contract_test_suite.json
tests/pseudonyms_module/: contract_test_suite.json
tests/root/: contract_test_suite.json
tests/ttl_module/: contract_test_suite.json
