[project]
name = "repl-nix-hermesp2p"
version = "0.1.0"
description = "HermesP2P: A decentralized, cryptographically secure, peer-to-peer messaging platform with transient, ephemeral communication and no central control."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
]
